Har lagt till entiteter och ID för alla, samt några nya repositories

--- a/Scrumproject/Scrumproject.csproj
+++ b/Scrumproject/Scrumproject.csproj
@@ -61,14 +61,18 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Data\BossRepository.cs" />
-    <Compile Include="Data\UserRepository.cs" />
     <Compile Include="GUI\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Logic\Entities\AdvancePayments.cs" />
+    <Compile Include="Logic\Entities\Boss.cs" />
+    <Compile Include="Logic\Entities\Countries.cs" />
+    <Compile Include="Logic\Entities\User.cs" />
+    <Compile Include="Logic\LogicHandler.cs" />
+    <Compile Include="Logic\Entities\Report.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -95,9 +99,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Logic\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
