--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,8 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+/Scrumproject/Logic/EpostHandler.cs
+/packages/repositories.config
+/packages/Microsoft.Owin.3.0.0/Microsoft.Owin.3.0.0.nupkg
+/packages/Microsoft.Owin.3.0.0/lib/net45/Microsoft.Owin.XML
+/packages/Microsoft.Owin.3.0.0/lib/net45/Microsoft.Owin.dll
