--- a/Scrumproject/Scrumproject.csproj
+++ b/Scrumproject/Scrumproject.csproj
@@ -101,7 +101,7 @@
     <Compile Include="Logic\Entities\User.cs" />
     <Compile Include="Logic\LogicHandler.cs" />
     <Compile Include="Logic\Entities\Report.cs" />
-    <Compile Include="Logic\YoloHandler.cs" />
+    <Compile Include="Logic\EmailHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
