--- a/Scrumproject/App.config
+++ b/Scrumproject/App.config
@@ -29,12 +29,24 @@
       </customBinding>
     </bindings>
     <client>
-      <endpoint address="http://www.webservicex.net/CurrencyConvertor.asmx"
-        binding="basicHttpBinding" bindingConfiguration="CurrencyConvertorSoap"
-        contract="CurrencyConvertor.CurrencyConvertorSoap" name="CurrencyConvertorSoap" />
-      <endpoint address="http://www.webservicex.net/CurrencyConvertor.asmx"
-        binding="customBinding" bindingConfiguration="CurrencyConvertorSoap12"
-        contract="CurrencyConvertor.CurrencyConvertorSoap" name="CurrencyConvertorSoap12" />
+      <endpoint address="http://www.webservicex.net/CurrencyConvertor.asmx" binding="basicHttpBinding" bindingConfiguration="CurrencyConvertorSoap" contract="CurrencyConvertor.CurrencyConvertorSoap" name="CurrencyConvertorSoap" />
+      <endpoint address="http://www.webservicex.net/CurrencyConvertor.asmx" binding="customBinding" bindingConfiguration="CurrencyConvertorSoap12" contract="CurrencyConvertor.CurrencyConvertorSoap" name="CurrencyConvertorSoap12" />
     </client>
   </system.serviceModel>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
