Report_Window_Updates_Version_MG1_Rank_Noob

--- a/Scrumproject/Scrumproject.csproj
+++ b/Scrumproject/Scrumproject.csproj
@@ -76,6 +76,7 @@
       <DependentUpon>LoginWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Logic\Entities\CurrencyConverter.cs" />
+    <Compile Include="Logic\Entities\DateHandler.cs" />
     <Compile Include="Logic\Validator.cs" />
     <Compile Include="Service References\CurrencyConvertor\Reference.cs">
       <AutoGen>True</AutoGen>
