Lagt till separat projekt för testning av filhanteringssystem. Skall tas bort sen.

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\Scrum.Data\packages.config" />
   <repository path="..\Scrumproject\packages.config" />
+  <repository path="..\WpfApplication1\packages.config" />
 </repositories>
