--- a/Scrumproject/Scrumproject.csproj
+++ b/Scrumproject/Scrumproject.csproj
@@ -75,6 +75,9 @@
     <Compile Include="GUI\LoginWindow.xaml.cs">
       <DependentUpon>LoginWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="GUI\ForgottenPasswordWindow.xaml.cs">
+      <DependentUpon>ForgottenPasswordWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Logic\DateHandler.cs" />
     <Compile Include="Logic\Entities\CurrencyConverter.cs" />
     <Compile Include="Logic\Validator.cs" />
@@ -99,6 +102,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="GUI\ForgottenPasswordWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Logic\Entities\AdvancePayments.cs" />
