--- a/Scrum.Data/App.config
+++ b/Scrum.Data/App.config
@@ -14,8 +14,7 @@
     <add name="scrumEntities" connectionString="metadata=res://*/EntityModel.csdl|res://*/EntityModel.ssdl|res://*/EntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=n5fq1018kf.database.windows.net;initial catalog=scrumprojekt;persist security info=True;user id=scrum;password=DatabasePass1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>-->
   <connectionStrings>
-    <add name="scrumEntities" connectionString="metadata=res://*/EntityModel.csdl|res://*/EntityModel.ssdl|res://*/EntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=
-    n5fq1018kf.database.windows.net;Initial Catalog=scrumprojekt;Integrated Security=False;User ID=scrum
-        ;Password=DatabasePass1;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False&quot;" providerName="System.Data.EntityClient"/>
-</connectionStrings>
+   
+    <add name="scrumprojectEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=n5fq1018kf.database.windows.net;initial catalog=scrumprojekt;persist security info=True;user id=scrum;password=DatabasePass1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
