--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,4 @@ $RECYCLE.BIN/
 /packages/Microsoft.Owin.3.0.0/Microsoft.Owin.3.0.0.nupkg
 /packages/Microsoft.Owin.3.0.0/lib/net45/Microsoft.Owin.XML
 /packages/Microsoft.Owin.3.0.0/lib/net45/Microsoft.Owin.dll
+/packages/iTextSharp.5.5.5/iTextSharp.5.5.5.nuspec
