--- a/Scrum.Data/Scrum.Data.csproj
+++ b/Scrum.Data/Scrum.Data.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Data\PDFRepository.cs" />
     <Compile Include="Data\ReportRepository.cs" />
     <Compile Include="Data\ReportTestClass.cs" />
+    <Compile Include="Data\TravelRepository.cs" />
     <Compile Include="Data\UserRepository.cs" />
     <Compile Include="EntityModel.Context.cs">
       <AutoGen>True</AutoGen>
