--- a/Scrumproject/Scrumproject.csproj
+++ b/Scrumproject/Scrumproject.csproj
@@ -85,6 +85,9 @@
     <Compile Include="Logic\DateHandler.cs" />
     <Compile Include="Logic\DayHandler.cs" />
     <Compile Include="Logic\Entities\CurrencyConverter.cs" />
+    <Compile Include="Logic\Entities\RealReportEntity.cs" />
+    <Compile Include="Logic\Entities\ReceiptsEntity.cs" />
+    <Compile Include="Logic\Entities\TravelInfoEntity.cs" />
     <Compile Include="Logic\ReportHandler.cs" />
     <Compile Include="Logic\StatisticsHandler.cs" />
     <Compile Include="Logic\Validator.cs" />
