Receipt i PDF, på börjad sortering av rapport

--- a/Scrumproject/Scrumproject.csproj
+++ b/Scrumproject/Scrumproject.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Logic\Entities\ReceiptsEntity.cs" />
     <Compile Include="Logic\Entities\TravelInfoEntity.cs" />
     <Compile Include="Logic\ReportHandler.cs" />
+    <Compile Include="Logic\SortHandler.cs" />
     <Compile Include="Logic\StatisticsHandler.cs" />
     <Compile Include="Logic\Validator.cs" />
     <Compile Include="Logic\XmlReader.cs" />
