--- a/Scrum.Data/Scrum.Data.csproj
+++ b/Scrum.Data/Scrum.Data.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Data\CountriesRepository.cs" />
     <Compile Include="Data\CountryXML.cs" />
     <Compile Include="Data\PDFRepository.cs" />
+    <Compile Include="Data\ReceiptRepository.cs" />
     <Compile Include="Data\ReportRepository.cs" />
     <Compile Include="Data\ReportTestClass.cs" />
     <Compile Include="Data\TravelRepository.cs" />
